Put word-wrap on sidebar content to avoid problems with ex. long usernames

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1137,6 +1137,7 @@ header li, footer li{
 
     .sidebar{
         display: block;
+        word-wrap: break-word;
         padding: 20px;
         background: #fff;
         border-radius: 10px;
